Changes in 0.93:
  * Bug Fixes
    * A bug in the "conary verify" code sometimes resulted in an
      unhandled TroveIntegrity exception when local modifications were
      made on the system. (bug #507)
    * Usernames and passwords with RFC 2396 reserved characters (such
      as '/') are now handled properly. (bug #587)

Changes in 0.92:
  o Package Building Changes:
    * Conary policy has been split out into the conary-policy package.
      (Some policy was left in conary proper; it is needed for
      internal packaging work.)
    * Conary prints out the name of each policy as it runs, making it
      possible to see which policies take the most time.
    * BuildLog files no longer contain lines that end with \r.
    * A new 'emergeUser' config item has been added.  Conary will
      change to this user when emerging packages as root.
    * --no-deps is now accepted by 'conary emerge'.

  o Group Building Changes:
    * A bug has been fixed in dependency checking when using
      autoResolve where deleted weak troves would be included in
      autoResolve and depChecks.

  o Client changes:
    * Conary can now rate limit uploads and downloads.  The rate limit
      is controlled by the "uploadRateLimit" and "downloadRateLimit"
      configuration variables, which is expressed in bytes per second.
      Also, Conary displays the transfer rate when uploading and
      downloading.  Thanks to Pavel Volkovitskiy for these features.
    * The client didn't write config files for merged changesets in
      the right order, which could result in changesets which could
      not be committed to a repository.
    * Fixed a bug in the update code caused conary to behave
      incorrectly when updating groups.  Conary would install
      components of troves that were not installed.

  o General Bug Fixes
    * Conary did not include the trove sha1 in the troveinfo diff
      unconditionally.  This prevents clients from being able to